# actual_real_flightsim

./: .gitignore  Cargo.toml
src/: camera_bundle.rs  main.rs
src/flight-dynamics-lib/: Cargo.toml
src/flight-dynamics-lib/src/: cockpit.rs  engine.rs  lib.rs  plane.rs  wing.rs
src/physics/: engine.rs  mod.rs  plane.rs  wing.rs
src/ui_things/: cockpit.rs  mod.rs
