[package]
name = "newflight"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", default-features = false, features = ["animation", "async_executor", "bevy_asset", "bevy_color", "bevy_core_pipeline", "bevy_gilrs", "bevy_gizmos", "bevy_gltf", "bevy_input_focus", "bevy_log", "bevy_mesh_picking_backend", "bevy_pbr", "bevy_picking", "bevy_render", "bevy_scene", "bevy_sprite", "bevy_sprite_picking_backend", "bevy_state", "bevy_text", "bevy_ui", "bevy_ui_picking_backend", "bevy_window", "bevy_winit", "custom_cursor", "default_font", "hdr", "multi_threaded", "png", "smaa_luts", "std", "sysinfo_plugin", "tonemapping_luts", "webgl2", "x11"] }


nalgebra = "0.33.2"
log = { version = "*", features = ["max_level_warn", "release_max_level_warn"] }
blake3 = "1.8.2"
flight-dynamics-lib = {path = "src/flight-dynamics-lib"}


[profile.dev]
opt-level = 1
